03/05/19(fixed bug z-index ddm and tabs)

--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -53,6 +53,8 @@
     }
 
     &__nav{
+        display: flex;
+        flex-direction: row;
         width: 97rem;
     }
 
@@ -61,19 +63,19 @@
         flex-direction: row;
         justify-content: space-around;
         transform: translateY(40%);
+        z-index: 1;
     }
 
     &__nav-li{
         padding: 1.44rem 1.89rem;
-        transition: all 0.3s ease;
+        transition: all 0.4s ease;
         transform: translateY(-10%);
         position: relative;
 
         &:hover{
             background: #a1ce31;
-            // color: #fff;
-            border-radius: 0.5rem;
-            transition: all 0.3s ease;
+            border-radius: 0.3rem;
+            transition: all 0.4s ease;
         }
 
         &:hover .header__nav-link{
@@ -88,15 +90,12 @@
         &:hover .header__nav-submenu-ul{
             display: flex;
             flex-direction: column;
-            transform: translateY(150%);
-            // transform: translateX(-10%);
             position: absolute;
+            left: 0rem;
+            top: 5rem;
             background: #fff;
-            // top: 5rem;
             width: 25.56rem;
-            // z-index: 5;
-            // overflow: hidden;
-
+            padding-top: 2.4rem;
         }
 
     }
@@ -104,6 +103,14 @@
     &__nav-submenu-ul{
         display: none;
     }
+
+    &__nav-submenu-li{
+        border-bottom: 0.1rem solid #767777;
+        border-left: 0.15rem solid #767777;
+        border-right: 0.15rem solid #767777;
+        padding: 1.5rem;
+    }
+
 
     &__registrationMenu-wrap{
         display: flex;
