--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,9 +9,9 @@
 
 
 
-.body{
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    margin: 0 auto;
-}
+// .body{
+//     display: flex;
+//     flex-direction: column;
+//     box-sizing: border-box;
+//     margin: 0 auto;
+// }
