--- a/src/styles/tabsStyle.scss
+++ b/src/styles/tabsStyle.scss
@@ -25,12 +25,9 @@
 .hide:checked + label {
     background-color :#fff;
     color: rgb(33, 33, 33);
-    z-index:1;
     cursor: pointer;
 }
 .tab_content {
-    // display: flex;
-    // flex-direction: row;
     width: 100%;
     height: 15.89rem;
     padding: 3rem 0rem 0rem 3rem;
@@ -59,7 +56,6 @@
         padding-left: 6.22rem;
         font-size: 1.56rem;
         margin-right: 0.56rem;
-        // z-index: 3;
 
         & + label::before{
             content: "";
